Update configuration to support multi-monitor setup
- Update autorandr config
  - Never set gamma
  - Add preswitch to save profile since autorandr --config is unreliable
  - Handle monitor plugged in before starting x (run autorandr in autostart)
- hc_monitor_setup - setup things differently depending on whether connecting to a screen intended to be used as a monitor vs. one intendend to be used as a tv
  - Don't lock tag for monitor (use any tag rather than one dedicated to media)
  - Run another polybar on monitor
  - Set wallpaper on monitor
  - Show notifications on monitor if it's focused
  - Don't use audio through HDMI on monitor (I use headphones not speakers)
  - Require explict keybinding to switch between monitors (and enable swap_monitors_to_get_tag) and improve that keybinding (super + comma)
  - Add config to run redshift on all screens (but don't enable for now)

For all babashka scripts:
- Use loop-lines helper that checks there's still output and removes some boilerplate
- Prefer shell over sh if want to see output

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -8243,6 +8243,7 @@ TODO eventually
   ;; - `agressive-indent-mode' conflicts with lsp formatting
   (gsetq-local lsp-enable-on-type-formatting nil)
   ;; also makes more sense for editor to handle
+  ;; - don't think lsp can handle macro's {style/indent}
   ;; TODO would be slightly better to change only once jacked in
   (gsetq-local lsp-enable-indentation nil)
 
@@ -9559,7 +9560,7 @@ If a region is active, toggle marking all files in the region."
   (defun noct-dired-walset ()
     "Set wallpaper and update pywal colors."
     (interactive)
-    (noct-dired-async-run "walset --store"))
+    (noct-dired-async-run "walset --zoom"))
 
   (defun noct-dired-bgset ()
     "Set wallpaper."
