Mirror kyria (external keyboard) changes on laptop
- Update symbol/altgr and navigation/extend layers
- Switch from kmonad to kanata (which fixes the issues that were preventing me
  from using it primarily)
- Use kanata to remap trackpoint buttons so they can be dual-role keys (with
  xcape or with kanata directly)
- Put all of open paren/bracket/brace on thumb keys (using trackpoint buttons
  for bracket and paren)
- Replace klfc+xmodmap+xcape+kanata+sxhkd+hkd with kanata+sxhkd (keep former as
  backup though)
- Unbind left shift, capslock, tab, and backspace to force to use thumb keys
- Further increase repeat rate and reduce time before repeat

Rldkbd:
- Have it handle all keyboard setup including restarting hotkey daemon (also
  necessary so can run in background rather than blocking while kanata starts up)
- Fix herbstluftwm backup rldkbd keybinding
- Remove xchainkeys config (not available and not needed; using hc keybind for backup)

Update extend layer:
- Bind extend+w to control+backspace (backspace word behavior without closing
  things some places like control+w); fix control+backspace in zsh
- Remove extend+f as grave (mouse movement on external keyboard, nothing on
  laptop keyboard)
- Bind printscreen as extend+p (so I don't have to go looking for it or
  accidentally press it)
- Bind media and brightness keys on extend layer
  - Unfoturnately sxhkd fails to grab them (when using klfc, not kanata); using
  hkd as a workaround
- Bind C-Tab and C-S-Tab on thumb keys

Add more sxhkd keybindings
- Bind media keys that are now on extend layer
- Bind warpd hint commands to try out
- Bind key to take screenshot in most recent mpv instance (and change screenshot
  template to match normal one)
- Use playerctl instead of mpc to also handle spotify
- Bind a key to toggle anything with playerctl (also youtube)
- Use super+control as hotkey to allow using alt (opposite side of keyboard)
  instead of shift in hotkey combinations
- Also add sxhkdrc-mode Emacs packa

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -7117,6 +7117,11 @@ Used for =*Warnings*= buffer, for example.
   "q" #'quit-window)
 #+end_src
 
+** Sxhkdrc Mode
+#+begin_src emacs-lisp
+(use-package sxhkdrc-mode)
+#+end_src
+
 ** Udev
  #+begin_src emacs-lisp
 (use-package udev-mode)
@@ -9905,6 +9910,7 @@ That said, I don't do many complicated things in terminal, so I mostly use a ded
   (defun noct-ement-connect-or-list-rooms ()
     "List matrix rooms or connect if not connected."
     (interactive)
+    (require 'ement)
     (cond (ement-sessions
            (call-interactively #'ement-list-rooms))
           ((ement--read-sessions)
